--- a/styles/dark.css
+++ b/styles/dark.css
@@ -10,3 +10,10 @@
     чем стили в медиазапросе предпочтений пользователя
   */
 }
+
+:root .theme-dark {
+  --accent-color: #ff0070;
+  --title-color: #DB00FF;
+  --title-text-color: #000028;
+  --main-text-color: #F1B2CE;
+}
