--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,11 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --accent-color: #ff0070;
+  --title-color: #DB00FF;
+  --title-text-color: #000028;
+  --main-text-color: #F1B2CE;
+}
+
