--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,27 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-image: var(--bg-image);
   font-family: "IBM Plex Mono";
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: var(--bg-color);
+  color: var(--main-text-color);
+  padding: 10px;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 50px;
+  gap: 40px;
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
 .header {
   display: grid;
   grid-template-columns: 1fr 70px;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  height: 97vh;
   padding: 10px;
 }
 
@@ -22,13 +32,13 @@
 
 .header__theme-menu-list {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
   gap: 10px;
   text-align: center;
 }
 
 .header__theme-menu-item {
-  color: var(--accent-color);
+  color: var(--menu-color);
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -41,25 +51,15 @@
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--menu-color);
 }
 
-.rec {
-  grid-area: 1/2/2/3;
-  color: var(--accent-color);
-  text-align: center;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 25px; /* 138.889% */
+.header__theme-menu-button:hover {
+  border: 1px solid var(--menu-color);
 }
 
-.rec::after {
-  content: url(../images/Ellipse\ 4.svg);
-  justify-self: center;
-  align-self: center;
-  width: 9px;
-  height: 9px;
+.accent-title {
+  margin-top: 20px;
 }
 
 .main-title {
@@ -82,6 +82,14 @@
   color: var(--title-text-color);
 }
 
+.section-title {
+  color: var(--menu-color);
+}
+
+.section-text {
+  padding-top: 10px;
+}
+
 .decorated-zone {
   position: relative;
 }
@@ -90,22 +98,22 @@
   content: "";
   width: 25.038px;
   height: 24.999px;
-  border-top: 1px solid var(--accent-color);
-  border-right: 1px solid var(--accent-color);
+  border-top: 1px solid var(--menu-color);
+  border-right: 1px solid var(--menu-color);
   position: absolute;
-  left: 340px;
-  top: 10px;
+  top: 0;
+  right: 0;
 }
 
 .decorated-zone::after {
   content: "";
   width: 25.038px;
   height: 24.999px;
-  border-bottom: 1px solid var(--accent-color);
-  border-left: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--menu-color);
+  border-left: 1px solid var(--menu-color);
   position: absolute;
-  top: 853px;
-  left: 10px;
+  left: 0;
+  bottom: 0;
 }
 
 
