--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,26 +13,26 @@
 
 :root .theme_dark {
   --accent-color: #ff0070;
-  --title-color: #DB00FF;
+  --title-color: #db00ff;
   --title-text-color: #000028;
-  --main-text-color: #F1B2CE;
+  --main-text-color: #f1b2ce;
   --menu-color: #ff0070;
 }
 
 .page.theme_dark {
   background-image: var(--bg-image);
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .vhs {
-  color: var(--accent-color);
-  text-transform: uppercase;
-  text-align: center;
   position: absolute;
   top: 0;
   right: 10px;
+  color: var(--accent-color);
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .vhs::before {
@@ -42,9 +42,9 @@
 .vhs::after {
   content: "";
   display: inline-block;
-  margin-left: 10px;
   width: 9px;
   height: 9px;
+  margin-left: 10px;
   border-radius: 10px;
   background-color: var(--accent-color);
   filter: drop-shadow(0px 0px 4px var(--accent-color));
