--- a/styles/light.css
+++ b/styles/light.css
@@ -12,19 +12,19 @@
 }
 
 :root .theme_light {
-  --accent-color: #FF8DCB;
-  --title-color: #FFC2E6;
+  --accent-color: #ff8dcb;
+  --title-color: #ffc2e6;
   --title-text-color: #353430;
   --main-text-color: #353430;
-  --bg-color: #FFF1F7;
+  --bg-color: #fff1f7;
   --menu-color: #353430;
   --bg-image: url(../images/cover-image-light.png);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --accent-color: #FF8DCB;
-    --title-color: #FFC2E6;
+    --accent-color: #ff8dcb;
+    --title-color: #ffc2e6;
     --title-text-color: #353430;
     --main-text-color: #353430;
   }
@@ -32,12 +32,11 @@
 
 .page.theme_light {
   background-image: var(--bg-image);
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .theme_light .vhs {
   display: none;
 }
-
