--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,18 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  background-image: var(--bg-image);
-  font-family: "IBM Plex Mono";
-  background-image: var(--bg-image);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-color: var(--bg-color);
-  color: var(--main-text-color);
-  padding: 10px;
   display: grid;
   gap: 40px;
+  padding: 10px;
+  color: var(--main-text-color);
+  font-family: "IBM Plex Mono";
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
@@ -27,7 +27,6 @@
 
 .header__theme-menu {
   grid-area: 2/2/3/3;
-
 }
 
 .header__theme-menu-list {
@@ -39,15 +38,15 @@
 
 .header__theme-menu-item {
   color: var(--menu-color);
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 18px; /* 100% */
 }
 
 .header__theme-menu-button {
-  background-color: transparent;
   border: none;
+  background-color: transparent;
 }
 
 .header__theme-menu-button_active {
@@ -65,11 +64,11 @@
 .main-title {
   grid-area: 3/1/4/3;
   color: var(--title-color);
-  text-shadow: 4px 4px 0px var(--accent-color);
+  font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-style: normal;
-  font-weight: 700;
   line-height: 82.5%; /* 95.7px */
+  text-shadow: 4px 4px 0px var(--accent-color);
 }
 
 .header-accent-title {
@@ -78,16 +77,16 @@
 }
 
 .title-decor {
-  background-color: var(--accent-color);
   color: var(--title-text-color);
+  background-color: var(--accent-color);
+}
+
+.accent-title {
+  margin-bottom: 10px;
 }
 
 .section-title {
   color: var(--menu-color);
-}
-
-.section-text {
-  padding-top: 10px;
 }
 
 .decorated-zone {
@@ -96,24 +95,42 @@
 
 .decorated-zone::before {
   content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 25.038px;
   height: 24.999px;
   border-top: 1px solid var(--menu-color);
   border-right: 1px solid var(--menu-color);
-  position: absolute;
-  top: 0;
-  right: 0;
 }
 
 .decorated-zone::after {
   content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 25.038px;
   height: 24.999px;
   border-bottom: 1px solid var(--menu-color);
   border-left: 1px solid var(--menu-color);
-  position: absolute;
-  left: 0;
-  bottom: 0;
 }
 
+.gallery {
+  display: grid;
+  gap: 10px;
+}
 
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 97vh;
+}
