--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,10 +5,9 @@
 
 :root {
   --accent-color: #ff0070;
-  --title-color: #DB00FF;
+  --title-color: #db00ff;
   --title-text-color: #000028;
-  --main-text-color: #F1B2CE;
+  --main-text-color: #f1b2ce;
   --bg-text-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
 }
-
