--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,5 +9,6 @@
   --title-text-color: #000028;
   --main-text-color: #f1b2ce;
   --bg-text-color: #000028;
+  --bg-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
 }
