--- a/styles/light.css
+++ b/styles/light.css
@@ -27,6 +27,9 @@
     --title-color: #ffc2e6;
     --title-text-color: #353430;
     --main-text-color: #353430;
+    --bg-color: #fff1f7;
+    --menu-color: #353430;
+    --bg-image: url(../images/cover-image-light.png);
   }
 }
 
