--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,15 @@
   font-size: 18px;
 }
 
+.section-text {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.4px;
+  letter-spacing: 0em;
+  text-align: left;
+
+}
+
 .decorated-zone {
   position: relative;
 }
