--- a/styles/dark.css
+++ b/styles/dark.css
@@ -39,6 +39,12 @@
 
 .vhs::before {
   content: "rec";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: center;
+
 }
 
 .vhs::after {
