--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,7 @@
   --title-color: #db00ff;
   --title-text-color: #000028;
   --main-text-color: #f1b2ce;
-  --bg-text-color: #000028;
+  --menu-color: #ff0070;
   --bg-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
 }
