--- a/styles/style.css
+++ b/styles/style.css
@@ -17,19 +17,20 @@
 .header {
   display: grid;
   grid-template-columns: 1fr 70px;
-  grid-template-rows: repeat(4, 1fr);
+  grid-auto-rows: min-content;
   gap: 10px;
   height: 100vh;
 }
 
 .header__theme-menu {
   grid-area: 2/2/3/3;
+  padding-top: 56px;
 }
 
 .header__theme-menu-list {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  gap: 10px;
+  gap: 15px;
   text-align: center;
 }
 
@@ -54,10 +55,6 @@
   border: 1px solid var(--menu-color);
 }
 
-.accent-title {
-  margin-top: 20px;
-}
-
 .main-title {
   grid-area: 3/1/4/3;
   color: var(--title-color);
@@ -66,15 +63,16 @@
   font-style: normal;
   line-height: 82.5%; /* 95.7px */
   text-shadow: 4px 4px 0px var(--accent-color);
+  padding-top: 57px;
 }
 
 .header-accent-title {
   grid-area: 4/1/5/3;
-  justify-self: end;
+  justify-self: flex-end;
   align-self: center;
-  max-width: 355px;
-  margin-top: 55px;
-  margin-bottom: 66px;
+  margin-top: 45px;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .title-decor {
@@ -83,15 +81,26 @@
 }
 
 .accent-title {
+  font-size: 18px;
+  line-height: 23.4px;
+}
+
+.accent-title {
+  margin-top: 20px;
+}
+
+.accent-title:only-of-type{
   margin-bottom: 10px;
+  margin-top: 0;
 }
 
 .section {
-  margin-bottom: 50px;
+  padding-bottom: 50px;
+  line-height: 23.4px;
 }
 
 .section:first-child {
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .section-title {
@@ -105,7 +114,7 @@
   line-height: 23.4px;
   letter-spacing: 0em;
   text-align: left;
-
+  padding-top: 10px;
 }
 
 .decorated-zone {
@@ -126,7 +135,7 @@
 .decorated-zone::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: 40px;
   left: 0;
   width: 25.038px;
   height: 24.999px;
@@ -146,9 +155,10 @@
 .image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
+
 
 .footer {
   position: relative;
