--- a/styles/style.css
+++ b/styles/style.css
@@ -145,17 +145,14 @@
 
 .gallery {
   display: grid;
-  gap: 2px;
-}
-
-.gallery__lot {
-  display: block;
+  gap: 10px;
 }
 
 .image {
+  display: block;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 
@@ -166,6 +163,15 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.footer-main-title {
+  color: var(--title-color);
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  line-height: 82.5%; /* 95.7px */
+  text-shadow: 4px 4px 0px var(--accent-color);
 }
 
 @media (width > 375px) {
