Добавлен экран планшетов

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,4 +39,6 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
