--- a/styles/dark.css
+++ b/styles/dark.css
@@ -21,39 +21,19 @@
   --bg-image: url(../images/cover-image-dark.png);
 }
 
+.theme_dark .vhs {
+  display: block;
+}
+
+@media (prefers-color-scheme: dark) {
+  .vhs {
+    display: block;
+  }
+}
+
 .page.theme_dark {
   background-image: var(--bg-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-
-.vhs {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  color: var(--accent-color);
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.vhs::before {
-  content: "rec";
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 25px;
-  letter-spacing: 0em;
-  text-align: center;
-
-}
-
-.vhs::after {
-  content: "";
-  display: inline-block;
-  width: 9px;
-  height: 9px;
-  margin-left: 10px;
-  border-radius: 10px;
-  background-color: var(--accent-color);
-  filter: drop-shadow(0px 0px 4px var(--accent-color));
 }
