--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,5 +38,8 @@ a {
   font-size: inherit;
   line-height: inherit;
   text-decoration: none;
+}
+
+a {
   text-shadow: 2px 2px 0 var(--accent-color);
 }
