--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 .page {
-  padding: 10px;
   color: var(--main-text-color);
   font-family: "IBM Plex Mono";
   background-color: var(--bg-color);
@@ -11,6 +10,8 @@
 }
 
 .header {
+  padding: 10px;
+  padding-bottom: 0;
   display: grid;
   grid-template-columns: 1fr 70px;
   grid-auto-rows: min-content;
@@ -72,6 +73,11 @@
   font-weight: 700;
 }
 
+.main {
+  padding: 10px;
+  padding-bottom: 0;
+}
+
 .title-decor {
   color: var(--title-text-color);
   background-color: var(--accent-color);
@@ -93,8 +99,8 @@
   line-height: 23.4px;
 }
 
-.section:first-child {
-  margin-top: 10px;
+.section:last-child {
+  padding-bottom: 40px;
 }
 
 .section-title {
@@ -113,8 +119,8 @@
 
 .vhs {
   position: absolute;
-  top: 0;
-  right: 10px;
+  top: 10px;
+  right: 20px;
   color: var(--accent-color);
   text-align: center;
   text-transform: uppercase;
@@ -148,8 +154,8 @@
 .decorated-zone::before {
   content: "";
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   width: 25.038px;
   height: 24.999px;
   border-top: 1px solid var(--menu-color);
@@ -159,8 +165,8 @@
 .decorated-zone::after {
   content: "";
   position: absolute;
-  bottom: 20px;
-  left: 0;
+  bottom: 10px;
+  left: 10px;
   width: 25.038px;
   height: 24.999px;
   border-bottom: 1px solid var(--menu-color);
@@ -187,6 +193,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  padding: 0  10px;
 }
 
 .footer-main-title {
@@ -200,13 +207,41 @@
 }
 
 @media (width > 375px) {
-  .page {
-    padding: 20px;
+  .header,
+  .main,
+  .footer {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .header {
-    padding-top: 106px;
-    margin-bottom: 40px;
+    padding-top: 125px;
+    margin-bottom: 50px;
+  }
+
+  .main {
+    padding-bottom: 0;
+  }
+
+  .footer {
+    padding-bottom: 20px;
+    margin-top: 20px;
+    padding-top: 50px;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::after {
+    left: 20px;
+    bottom: 20px;
+  }
+
+  .vhs {
+    top: 20px;
+    right: 30px;
   }
 
   .header-accent-title {
@@ -223,12 +258,6 @@
 
   .accent-title:only-of-type {
     margin-bottom: 20px;
-  }
-
-
-
-  .decorated-zone::after {
-    bottom: 40px;
   }
 
   .section {
