Исправлены отступы и ошибки

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,10 +26,11 @@
 }
 
 .header__theme-menu-list {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  gap: 15px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 .header__theme-menu-item {
@@ -42,20 +43,42 @@
 
 .header__theme-menu-button {
   border: none;
+  padding: 0.5px 13px;
+  outline: 1px solid transparent;
+  color: var(--menu-color);
   background-color: transparent;
+  cursor: pointer;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--menu-color);
+  outline: 1px solid var(--menu-color);
+  pointer-events: none;
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--menu-color);
+  outline: 1px solid var(--menu-color);
+}
+
+.header__theme-menu-button:focus,
+a:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--menu-color);
+}
+
+a:hover {
+  border-bottom: 1px solid var(--main-text-color);
+}
+
+a:focus-visible {
+  outline: 1px solid var(--main-text-color);
 }
 
 .main-title {
   grid-area: 3/1/4/3;
-  padding-top: 57px;
+  padding-top: 60px;
   color: var(--title-color);
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -192,6 +215,7 @@
   align-items: center;
   height: 100vh;
   padding: 0 10px;
+  padding-top: 10px;
 }
 
 .footer-main-title {
@@ -222,7 +246,6 @@
   }
 
   .footer {
-    margin-top: 20px;
     padding-top: 50px;
     padding-bottom: 20px;
   }
@@ -244,17 +267,20 @@
 
   .header-accent-title {
     max-width: 364px;
-    margin-top: 417px;
   }
 
   .main-title {
-    position: absolute;
-    top: 110px;
-    left: -20px;
+    margin-left: -20px;
+    padding-top: 165px;
+    padding-bottom: 110px;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .gallery-title {
+    margin-bottom: 20px;
+  }
+
+  .gallery-section {
     margin-bottom: 20px;
   }
 
@@ -326,7 +352,6 @@
     justify-self: flex-end;
     align-self: center;
     max-width: 491px;
-    margin-top: 490px;
     font-weight: 700;
     font-size: 18px;
   }
@@ -336,7 +361,8 @@
   }
 
   .main-title {
-    padding-top: 150px;
+    padding-top: 265px;
+    padding-bottom: 60px;
   }
 
   .header__theme-menu {
@@ -349,7 +375,8 @@
 
   .header__theme-menu-list {
     display: flex;
-    gap: 25px;
+    flex-direction: row;
+    gap: 11.5px;
   }
 
   .section-grid {
@@ -371,13 +398,43 @@
     max-width: 315px;
   }
 
-  .footer {
-    margin-top: 288px;
+  .gallery-section {
+    margin-bottom: 290px;
   }
 }
 
-@media (width > 1024) {
+@media (768px > width > 375px) {
+  .main-title {
+    padding-top: 0;
+    padding-bottom: 20px;
+  }
+  .header-accent-title {
+    margin-top: 0;
+  }
+
+  .section-grid {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (width > 1024px) {
   .section-title {
     max-width: max-content;
+  }
+
+  .main-title {
+    justify-self: center;
+  }
+
+  .header-accent-title {
+    justify-self: center;
+    max-width: 100%;
+  }
+}
+
+@media (768px < width < 1024px) {
+  .gallery-section {
+    margin-bottom: 10px;
   }
 }
