--- a/styles/dark.css
+++ b/styles/dark.css
@@ -6,21 +6,15 @@
   --menu-color: #ff0070;
   --bg-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
+  --button-hover-color: rgb(255, 0, 112, 0.4);
 }
 
-.theme_dark .vhs {
+.theme_dark .recording-logo {
   display: block;
 }
 
 @media (prefers-color-scheme: dark) {
-  .vhs {
+  .recording-logo {
     display: block;
   }
-}
-
-.page.theme_dark {
-  background-image: var(--bg-image);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
