--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .page {
   color: var(--main-text-color);
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono", Arial, Helvetica, sans-serif;
   background-color: var(--bg-color);
   background-image: var(--bg-image);
   background-repeat: no-repeat;
@@ -11,18 +11,19 @@
 
 .header {
   display: grid;
-  grid-template-columns: 1fr 70px;
-  grid-auto-rows: min-content;
-  gap: 10px;
+  grid-template-rows: 1fr auto 1fr;
   height: 100vh;
-  margin-bottom: 30px;
-  padding: 10px;
-  padding-bottom: 0;
+  max-height: 668px;
+  padding: 20px;
 }
 
 .header__theme-menu {
-  grid-area: 2/2/3/3;
-  padding-top: 56px;
+  display: flex;
+  grid-area: 1/1/2/2;
+  justify-self: end;
+  justify-content: end;
+  align-items: center;
+  align-self: center;
 }
 
 .header__theme-menu-list {
@@ -30,7 +31,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 11.5px;
+  font-weight: 400;
 }
 
 .header__theme-menu-item {
@@ -38,7 +40,6 @@
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  line-height: 18px; /* 100% */
 }
 
 .header__theme-menu-button {
@@ -46,6 +47,7 @@
   padding: 0.5px 13px;
   outline: 1px solid transparent;
   color: var(--menu-color);
+  text-transform: lowercase;
   background-color: transparent;
   cursor: pointer;
 }
@@ -56,7 +58,7 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--menu-color);
+  outline: 1px solid var(--button-hover-color);
 }
 
 .header__theme-menu-button:focus,
@@ -76,9 +78,11 @@ a:focus-visible {
   outline: 1px solid var(--main-text-color);
 }
 
+.not-bold {
+  font-weight: normal;
+}
+
 .main-title {
-  grid-area: 3/1/4/3;
-  padding-top: 60px;
   color: var(--title-color);
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -88,17 +92,14 @@ a:focus-visible {
 }
 
 .header-accent-title {
-  grid-area: 4/1/5/3;
   justify-self: flex-end;
   align-self: center;
-  margin-top: 45px;
   font-weight: 700;
   font-size: 18px;
 }
 
 .main {
-  padding: 10px;
-  padding-bottom: 0;
+  padding: 40px 10px;
 }
 
 .title-decor {
@@ -107,9 +108,12 @@ a:focus-visible {
 }
 
 .accent-title {
-  margin-top: 20px;
   font-size: 18px;
   line-height: 23.4px;
+}
+
+.accent-title__first {
+  margin-bottom: 20px;
 }
 
 .gallery-title {
@@ -118,12 +122,23 @@ a:focus-visible {
 }
 
 .section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   padding-bottom: 50px;
   line-height: 23.4px;
 }
 
-.section:last-child {
-  padding-bottom: 40px;
+.section-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section-grid-center__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .section-title {
@@ -140,7 +155,7 @@ a:focus-visible {
   text-align: left;
 }
 
-.vhs {
+.recording-logo {
   position: absolute;
   top: 10px;
   right: 20px;
@@ -149,7 +164,7 @@ a:focus-visible {
   text-transform: uppercase;
 }
 
-.vhs::before {
+.recording-logo::before {
   content: "rec";
   font-weight: 400;
   font-size: 18px;
@@ -158,15 +173,15 @@ a:focus-visible {
   text-align: center;
 }
 
-.vhs::after {
+.recording-logo::after {
   content: "";
   display: inline-block;
   width: 9px;
   height: 9px;
   margin-left: 10px;
   border-radius: 10px;
+  box-shadow: 0 0 4px 2px var(--accent-color);
   background-color: var(--accent-color);
-  filter: drop-shadow(0px 0px 4px var(--accent-color));
 }
 
 .decorated-zone {
@@ -200,6 +215,11 @@ a:focus-visible {
   gap: 10px;
 }
 
+.gallery-section {
+  gap: 0;
+  padding-bottom: 0;
+}
+
 .image {
   display: block;
   width: 100%;
@@ -214,18 +234,19 @@ a:focus-visible {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  padding: 0 10px;
-  padding-top: 10px;
+  max-height: 668px;
+  padding: 10px;
 }
 
 .footer-main-title {
-  padding-bottom: 10px;
+  justify-self: center;
+  align-self: center;
   color: var(--title-color);
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-style: normal;
   line-height: 82.5%; /* 95.7px */
-  text-shadow: 4px 4px 0px var(--accent-color);
+  text-shadow: 2px 2px 0px var(--accent-color);
 }
 
 @media (width > 375px) {
@@ -236,13 +257,17 @@ a:focus-visible {
     padding-left: 20px;
   }
 
-  .header {
-    margin-bottom: 50px;
-    padding-top: 125px;
+  .header,
+  .footer {
+    max-height: 1024px;
+  }
+
+  .header__theme-menu {
+    justify-self: end;
   }
 
   .main {
-    padding-bottom: 0;
+    padding: 60px 20px;
   }
 
   .footer {
@@ -260,7 +285,7 @@ a:focus-visible {
     left: 20px;
   }
 
-  .vhs {
+  .recording-logo {
     top: 20px;
     right: 30px;
   }
@@ -271,8 +296,6 @@ a:focus-visible {
 
   .main-title {
     margin-left: -20px;
-    padding-top: 165px;
-    padding-bottom: 110px;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
@@ -280,28 +303,19 @@ a:focus-visible {
     margin-bottom: 20px;
   }
 
-  .gallery-section {
-    margin-bottom: 20px;
-  }
-
-  .section {
+  .section:not(.gallery-section) {
     padding-bottom: 80px;
   }
 
   .section-grid {
     display: grid;
-    grid-template-columns: 236px 1fr;
+    grid-template-columns: 1fr 2fr;
     gap: 20px;
-  }
-
-  .accent-title:first-child {
-    margin-top: 0;
   }
 
   .section-grid-center {
     display: grid;
     grid-template-columns: 236px 1fr;
-    grid-template-rows: 70px 1fr;
     column-gap: 20px;
   }
 
@@ -339,43 +353,49 @@ a:focus-visible {
     padding-bottom: 30px;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
-
-  .section-grid-center .accent-title {
-    margin-top: 20px;
-  }
 }
 
 @media (width > 768px) {
-  .header-accent-title {
-    grid-area: 4/1/5/3;
-    justify-self: flex-end;
-    align-self: center;
-    max-width: 491px;
-    font-weight: 700;
-    font-size: 18px;
+  .header,
+  .header-accent-title,
+  .main-title {
+    margin: 0;
+    padding: 0;
   }
 
   .header {
-    padding-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto 1fr;
+    gap: 0;
+    padding: 20px;
+  }
+
+  .header-accent-title {
+    grid-area: 3/1/4/2;
+    max-width: 491px;
   }
 
   .main-title {
-    padding-top: 265px;
-    padding-bottom: 60px;
+    grid-area: 2/1/3/2;
+    margin-left: -20px;
   }
 
   .header__theme-menu {
-    display: flex;
-    grid-area: 1/1/2/3;
-    justify-content: center;
-    align-self: start;
-    padding-top: 0;
+    grid-area: 1/1/2/2;
+    justify-self: center;
+    align-self: flex-start;
+    padding: 0;
   }
 
   .header__theme-menu-list {
     display: flex;
     flex-direction: row;
     gap: 11.5px;
+  }
+
+  .main {
+    padding: 60px 20px;
   }
 
   .section-grid {
@@ -396,6 +416,21 @@ a:focus-visible {
   .section-title {
     max-width: 315px;
   }
+
+  .gallery-section {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  .footer {
+    padding: 20px;
+  }
+
+  .footer-main-title {
+    justify-self: center;
+    align-self: center;
+    padding: 0;
+  }
 }
 
 @media (768px > width > 375px) {
@@ -414,22 +449,21 @@ a:focus-visible {
 }
 
 @media (width > 1024px) {
-  .section-title {
-    max-width: max-content;
-  }
-
-  .main-title {
-    justify-self: center;
-  }
-
-  .header-accent-title {
-    justify-self: center;
-    max-width: 100%;
+  .header,
+  .footer {
+    max-height: 100vh;
   }
 }
 
 @media (768px < width < 1024px) {
   .gallery-section {
     margin-bottom: 10px;
+  }
+}
+
+@media (width < 375px) {
+  .header-accent-title {
+    justify-self: center;
+    max-width: 90%;
   }
 }
