--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,5 @@
   --menu-color: #ff0070;
   --bg-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
+  --button-hover-color: rgb(255, 0, 112, 0.4);
 }
