--- a/styles/light.css
+++ b/styles/light.css
@@ -6,6 +6,7 @@
   --bg-color: #fff1f7;
   --menu-color: #353430;
   --bg-image: url(../images/cover-image-light.png);
+  --button-hover-color: rgb(50, 49, 45, 0.4);
 }
 
 @media (prefers-color-scheme: light) {
